update CMakeList includes to handle building from external root dir

--- a/tcc/CMakeLists.txt
+++ b/tcc/CMakeLists.txt
@@ -31,7 +31,8 @@ target_include_directories( ${PROJECT_NAME} PRIVATE
     .
     inc
     ${CMAKE_BINARY_DIR}
-    ${CMAKE_BINARY_DIR}/tcc )
+    ${CMAKE_BINARY_DIR}/tcc 
+    ${CMAKE_BINARY_DIR}/tcc/tcc )
 
 install(TARGETS ${PROJECT_NAME}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} )
